--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,3 +1,10 @@
-.active{
-    color:red;
-}
+.home.light {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  
+  /* Styles for dark theme */
+  .home.dark {
+    background-color: #333333;
+    color: #ffffff;
+  }
